feat: 增加结算进度与分摊记录
