# server/src/http/openapi.rs
@@ -61,7 +61,8 @@ use super::{
         __path_update as __path_expense_update, CreatedExpenseData, CreatedExpenseEnvelope,
         DeleteExpenseRequest, DeletedExpenseData, DeletedExpenseEnvelope, ExpenseAggregateData,
         ExpenseAttachmentData, ExpenseData, ExpenseDraftRequest, ExpenseEnvelope, ExpenseFactData,
-        ExpenseListEnvelope, ExpensePaymentRequest, ExpenseSplitEntryRequest, ExpenseSplitRequest,
+        ExpenseListEnvelope, ExpensePaymentRequest, ExpenseSettlementProgressData,
+        ExpenseSplitEntryRequest, ExpenseSplitRequest, MemberSettlementProgressData,
         UpdateExpenseRequest,
     },
     notification::{
@@ -77,8 +78,9 @@ use super::{
         __path_create as __path_settlement_create, __path_get as __path_settlement_get,
         __path_list as __path_settlement_list, __path_update as __path_settlement_update,
         __path_void as __path_settlement_void, CreateSettlementRequest, CreatedSettlementData,
-        CreatedSettlementEnvelope, SettlementData, SettlementEnvelope, SettlementEnvelopeData,
-        SettlementListEnvelope, UpdateSettlementRequest, VoidSettlementRequest,
+        CreatedSettlementEnvelope, SettlementAllocationData, SettlementAllocationRequest,
+        SettlementData, SettlementEnvelope, SettlementEnvelopeData, SettlementListEnvelope,
+        UpdateSettlementRequest, VoidSettlementRequest,
     },
     sharing::{
         __path_export_csv, __path_summary, ActivitySummaryData, ActivitySummaryEnvelope,
@@ -248,6 +250,8 @@ use super::{
         ExpenseData,
         ExpenseFactData,
         ExpenseAggregateData,
+        ExpenseSettlementProgressData,
+        MemberSettlementProgressData,
         ExpenseAttachmentData,
         UploadAttachmentRequest,
         AttachmentBinary,
@@ -276,9 +280,11 @@ use super::{
         SummaryCategoryTotalData,
         SummaryRecommendationData,
         CreateSettlementRequest,
+        SettlementAllocationRequest,
         UpdateSettlementRequest,
         VoidSettlementRequest,
         SettlementData,
+        SettlementAllocationData,
         SettlementEnvelopeData,
         SettlementEnvelope,
         CreatedSettlementData,
